build: update package config

--- a/package.json
+++ b/package.json
@@ -55,13 +55,8 @@
     "pnpm": ">=8.4.0"
   },
   "scripts": {
-    "lint": "pnpm lint:eslint && pnpm lint:prettier && pnpm lint:stylelint && pnpm lint:markdownlint && pnpm lint:type",
-    "lint:eslint": "eslint --fix .",
-    "lint:prettier": "prettier --write .",
-    "lint:stylelint": "stylelint --fix",
-    "lint:markdownlint": "markdownlint --fix **/*.md",
-    "lint:type": "tsc --noEmit",
-    "test": "cross-env NODE_ENV=test vitest",
+    "lint": "eslint --fix . && prettier --write . && markdownlint --fix **/*.md && vue-tsc --noEmit",
+    "test": "vitest",
     "clean": "rimraf node_modules && rimraf dist",
     "changeset": "changeset",
     "bump": "changeset version",
